# sa_gcg

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml
docs/: SETUP.md
prompts/: harmful_extraction.txt  harmless_extraction.txt
runs/smoke/attack/: cosine.csv  loss.csv  meta.json  suffix.json
runs/smoke/coherence/: coherence.json
runs/smoke/defenses/: perplexity.json  smoothllm.json
runs/smoke/direction/: vicuna7b.json
runs/smoke/eval/: transfer_open_vicuna-7b.json
runs/smoke/mechanism/: cosine_curve.json
runs/smoke/transfer_anthropic/: transfer_api_anthropic.json
runs/smoke/transfer_open/: transfer_open_llama-2-7b.json
runs/smoke/transfer_openai/: transfer_api_anthropic.json  transfer_api_openai.json
scripts/: fetch_datasets.sh  rescore_pilot_substring.py  run_pilot.sh  score_pilot.py
src/sa_gcg/: __init__.py
src/sa_gcg/attack/: __init__.py  _common.py  activation_gcg.py  autodan_wrapper.py  base.py  gcg.py  no_suffix.py  ortho.py  pair_wrapper.py  registry.py  sa_gcg.py  soft_gcg.py
src/sa_gcg/cli/: __init__.py  _common.py  extract_direction.py  make_tables.py  run_attack.py  run_coherence.py  run_defenses.py  run_mechanism.py  run_transfer.py  verify_splits.py
src/sa_gcg/data/: __init__.py  registry.py  splits.py
src/sa_gcg/defenses/: __init__.py  adaptive.py  perplexity.py  smoothllm.py
src/sa_gcg/direction/: __init__.py  extractor.py
src/sa_gcg/eval/: __init__.py  alpaca_judge.py  generate.py  harmbench_cls.py  llamaguard.py  runner.py  strongreject.py  substring.py
tests/: conftest.py  test_artifact_writer.py  test_attack_config.py  test_chat_template.py  test_data_registry.py  test_imports.py  test_perplexity.py  test_schedule.py  test_smoothllm_perturb.py  test_splits.py  test_stats.py  test_strongreject_parser.py  test_substring.py
(+24 files in other folders)
